k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilda-atmos
  labels:
    app: tilda-atmos
    project: ventureforum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tilda-atmos
  template:
    metadata:
      labels:
        app: tilda-atmos
        project: ventureforum
    spec:
      nodeSelector:
        project: ventureforum

      imagePullSecrets:
        - name: registry-jscorp

      containers:
        - name: tilda-atmos
          image: registry.jscorp.uz/tilda-atmos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: data
              mountPath: /data

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tilda-atmos-data
