k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tilda-atmos
  namespace: ventureforum
  labels:
    app: tilda-atmos
    project: ventureforum
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: atmos.jscorp.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tilda-atmos
                port:
                  number: 80
